# MyHotKeyTool

./: Cargo.toml  README.md
src/: auto_clicker.rs  input_control.rs  main.rs
